src/opt/tests/snapshots/mut2ssa__basic.snap
---
created: "2019-04-01T23:41:31.961625400Z"
creator: insta@0.7.1
source: src/opt/tests/mut2ssa.rs
expression: "\n    let x = 1;\n    x = 2;\n    x = 3;\n\n    let y = 10;\n    log(y);\n    log(y + 1);\n"
---
<dead> = 1
_val = 2
<dead> = _val
_val$1 = 3
<dead> = _val$1
_ini = 10
y = _ini
_fun = <global log>
_arg = y
<dead> = _fun(_arg)
_fun$1 = <global log>
_lhs = y
_rhs = 1
_arg$1 = _lhs + _rhs
<dead> = _fun$1(_arg$1)
