src/opt/tests/snapshots/mut2ssa__basic_bail.snap
---
created: "2019-04-04T19:26:26.200097Z"
creator: insta@0.7.1
source: src/opt/tests/mut2ssa.rs
expression: "\n    let x = 1;\n    x = 2;\n    x = 3;\n    if (foo) log(x);\n\n    let y = 10;\n    log(y);\n    log(y + 1);\n    if (bar) (function() {\n        y = 5;\n    })();\n"
---
_ini = 1
x <= _ini
_val = 2
x <- _val
<dead> = _val
_val$1 = 3
x <- _val$1
<dead> = _val$1
_iff = <global foo>
<if> _iff:
    _fun = <global log>
    _arg = *x
    <dead> = _fun(_arg)
<else>:
    <empty>
_ini$1 = 10
y <= _ini$1
_fun = <global log>
_arg = *y
<dead> = _fun(_arg)
_fun$1 = <global log>
_lhs = *y
_rhs = 1
_arg$1 = _lhs + _rhs
<dead> = _fun$1(_arg$1)
_iff$1 = <global bar>
<if> _iff$1:
    _fun$2 = <function>:
        _val$2 = 5
        y <- _val$2
        <dead> = _val$2
    <dead> = _fun$2()
<else>:
    <empty>
