src/opt/tests/snapshots/mut2ssa__downleveling.snap
---
created: "2019-04-09T17:20:29.152121Z"
creator: insta@0.7.1
source: src/opt/tests/mut2ssa.rs
expression: "\n    let x = 1;\n    x = 2;\n    x = 3;\n\n    let y = 10;\n    log(y);\n    log(y + 1);\n"
---
_ini = 10
_fun = <global log>
<dead> = _fun(_ini)
_fun$1 = <global log>
_arg = 11
<dead> = _fun$1(_arg)
