src/opt/tests/snapshots/mut2ssa__downleveling_bail.snap
---
created: "2019-04-09T17:20:29.161120600Z"
creator: insta@0.7.1
source: src/opt/tests/mut2ssa.rs
expression: "\n    let x = 1;\n    x = 2;\n    x = 3;\n    if (foo) log(x);\n\n    let y = 10;\n    log(y);\n    log(y + 1);\n    if (bar) (function() {\n        y = 5;\n    })();\n"
---
_val = 3
_iff = <global foo>
<if> _iff:
    _fun$2 = <global log>
    <dead> = _fun$2(_val)
<else>:
    <empty>
_ini = 10
y <= _ini
_fun = <global log>
<dead> = _fun(_ini)
_fun$1 = <global log>
_lhs = *y
_rhs = 1
_arg = _lhs + _rhs
<dead> = _fun$1(_arg)
_iff$1 = <global bar>
<if> _iff$1:
    _val$1 = 5
    y <- _val$1
<else>:
    <empty>
