src/opt/tests/snapshots/mut2ssa__no_cross_case.snap
---
created: "2019-04-06T00:06:45.106981600Z"
creator: insta@0.7.1
source: src/opt/tests/mut2ssa.rs
expression: "\n    switch (foo) {\n        case 0:\n            let x = 1;\n        default:\n            g = function() { return x };\n    }\n"
---
_swi = <global foo>
_tst = 0
<switch> _swi:
    <case> _tst:
    _ini = 1
    x <= _ini
    <default>:
    _val = <function>:
        _ret = *x
        <return> _ret
    <global g> <- _val
    <dead> = _val
