src/opt/tests/snapshots/mut2ssa__time_travel_into_function_scope.snap
---
created: "2019-04-27T18:02:07.801710500Z"
creator: insta@0.7.4
source: src/opt/tests/mut2ssa.rs
expression: "\n    g = function() { return x };\n    let x = 1;\n"
---
_val = <function>:
    _ret = x
    <return> _ret
<global g> <- _val
<dead> = _val
_ini = 1
x = _ini
